cka/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    tier: frontend
spec:
  containers:
  - name: nginx-frontend
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
